--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -1,7 +1,8 @@
  #root {
-  max-width: 1280px;
+  max-width: 4280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
+  background-color: antiquewhite;
 }
 
